time-out/istio-timeout-poc/request-through-services/delayed-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: delayed-service
  labels:
    name: delayed-service
spec:
  containers:
    - name: delayed-service
      image: deminy/delayed-http-response:latest
---
apiVersion: v1
kind: Service
metadata:
  name: delayed-service-svc
spec:
  selector:
    name: delayed-service
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
